# show-attend-tell-implementation

./: .gitignore  Dockerfile  LICENSE  PROGRESSION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
checkpoints/: vocab.json
config/: train.yaml
config/encoder/: clip_vit_b16.yaml  resnet101.yaml  resnet50.yaml  vgg19.yaml
notebooks/: train_eval.ipynb
src/: eval.py  evaluate.py  inference.py  main.py  train.py  visualize.py
src/dataset/: AnnotationDataset.py  __init__.py  model_factory.py  transforms_factory.py  vocabulary.py
src/model/: attention.py  decoder.py  encoder.py
src/models/: attention.py  decoder.py  encoder.py  model.py  model_factory.py  transforms_factory.py
src/utils/: __init__.py  data.py  logging.py
