[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-implementation-uni"
version = "0.1.0"
description = "Paper implementation workspace for image captioning experiments"
requires-python = ">=3.10"
dependencies = [
    "wandb",
    "nltk",
    "pandas",
    "numpy",
    "numpy",
    "pillow",
    "matplotlib",
    "hydra-core",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
